# git-taz

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  UI_GUIDE.md  main.py  mypy.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
scripts/: create_sample_repo.py
src/: git-taz.py
src/git_taz/: __init__.py  core.py
src/git_taz/cli/: __init__.py  checkout_cli.py
src/git_taz/models/: __init__.py
src/git_taz/services/: __init__.py  git_operations.py
src/git_taz/tools/: __init__.py
src/git_taz/ui/: __init__.py  app.py  command_selection_form.py  repository_form.py  tool_selection_form.py
tests/: __init__.py  test_cli.py  test_core.py  test_models.py  test_services.py  test_tools.py  test_ui.py  test_ui_init.py
