[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-taz"
version = "0.1.0"
description = "A Git utility package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.45",
    "npyscreen>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",   # For coverage reporting
    "safety",       # Security vulnerability scanning
    "bandit[toml]", # Security linting
    "pre-commit",   # Pre-commit hooks
]

[project.scripts]
git-taz = "git_taz.core:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-v"]

[tool.black]
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]                  # Skip assert_used test
